--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,9 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.inc": "cpp",
+        "expected": "cpp",
+        "source_location": "cpp"
     }
 }
